# craftql

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: bin.rs  config.rs  extend_types.rs  lib.rs  main.rs  state.rs  utils.rs
test/test_tree/: b.graphql
tests/: integration.rs
tests/fixtures/: a.graphql  b.gql  schema.graphql
tests/fixtures/Directives/: deprecated.graphql  test.graphql
tests/fixtures/Types/Enums/: Episode.gql  EpisodeExtension.graphql  LengthUnit.graphql  Letter.gql
tests/fixtures/Types/Inputs/: a.gql  extension.gql
tests/fixtures/Types/Interfaces/: Character.graphql  CharacterExtension.gql
tests/fixtures/Types/Scalars/: DateTimeExtension.gql
tests/fixtures/Types/Types/: a.gql  b.graphql  c.gql  extension.graphql  orphan.gql
tests/fixtures/Types/Unions/: SearchResultExtension.graphql  SearchResults.graphql
tests/fixtures/sub/: d.gql
tests/fixtures/sub/sub_sub/: e.graphql
