[package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = ["command-line-utilities", "development-tools"]
description = "A CLI tool to visualize GraphQL schemas and to output a graph data structure as a graphviz .dot format"
edition = "2021"
exclude = [".github", "graph.svg", "rustfmt.toml"]
keywords = ["cli", "graph", "graphql", "graphviz", "terminal"]
license = "MIT"
name = "craftql"
readme = "README.md"
repository = "https://github.com/yamafaktory/craftql"
rust_version = "1.56"
version = "0.2.12-alpha.0"

[lib]
name = "craftql"
path = "src/lib.rs"

[[bin]]
name = "craftql"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.49"
clap = "3.0.0-beta.5"
graphql-parser = "0.4.0"
petgraph = "0.6.0"

[dependencies.async-std]
version = "1.10.0"
features = ["attributes", "unstable"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
